add functionality to clean up expired notes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
 				<li>A note expires in one week.</li>
 				<li>Cookies may be used to remember your session.</li>
 				<li>Otherwise your can save the URL of your note to reaccess it.</li>
+				<li>Check out the <a href="https://github.com/lezhou8/temp-notes">source code</a>.</li>
 			</ul>
 		</td>
 	</tr>
