readme filled in and cookie banner added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,5 +24,11 @@
 		</td>
 	</tr>
 </table>
+<div id="cookie-consent-banner">
+	<p>We use cookies to persist your notes between sessions. By clicking "Accept," you consent to the use of cookies.</p>
+	<button id="accept-cookies-btn" type="button">Accept</button>
+	<button id="reject-cookies-btn" type="button">Reject</button>
+	<span id="cookie-consent-result"></span>
+</div>
 </body>
 </html>
